// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-heading should render with _label="Headline" _level=0 1`] = `
<kol-heading>
  <template shadowrootmode="open">
    <div class="kol-heading">
      <strong class="kol-heading--strong kol-heading__headline">
        Headline
        <slot name="expert" slot="expert"></slot>
      </strong>
    </div>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _level=1 1`] = `
<kol-heading>
  <template shadowrootmode="open">
    <div class="kol-heading">
      <h1 class="kol-heading--h1 kol-heading__headline">
        Headline
        <slot name="expert" slot="expert"></slot>
      </h1>
    </div>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _level=2 1`] = `
<kol-heading>
  <template shadowrootmode="open">
    <div class="kol-heading">
      <h2 class="kol-heading--h2 kol-heading__headline">
        Headline
        <slot name="expert" slot="expert"></slot>
      </h2>
    </div>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _level=3 1`] = `
<kol-heading>
  <template shadowrootmode="open">
    <div class="kol-heading">
      <h3 class="kol-heading--h3 kol-heading__headline">
        Headline
        <slot name="expert" slot="expert"></slot>
      </h3>
    </div>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _level=4 1`] = `
<kol-heading>
  <template shadowrootmode="open">
    <div class="kol-heading">
      <h4 class="kol-heading--h4 kol-heading__headline">
        Headline
        <slot name="expert" slot="expert"></slot>
      </h4>
    </div>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _level=5 1`] = `
<kol-heading>
  <template shadowrootmode="open">
    <div class="kol-heading">
      <h5 class="kol-heading--h5 kol-heading__headline">
        Headline
        <slot name="expert" slot="expert"></slot>
      </h5>
    </div>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _level=6 1`] = `
<kol-heading>
  <template shadowrootmode="open">
    <div class="kol-heading">
      <h6 class="kol-heading--h6 kol-heading__headline">
        Headline
        <slot name="expert" slot="expert"></slot>
      </h6>
    </div>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _variant="h1" 1`] = `
<kol-heading>
  <template shadowrootmode="open">
    <div class="kol-heading">
      <h1 class="kol-heading--h1 kol-heading__headline">
        Headline
        <slot name="expert" slot="expert"></slot>
      </h1>
    </div>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _variant="h2" 1`] = `
<kol-heading>
  <template shadowrootmode="open">
    <div class="kol-heading">
      <h1 class="kol-heading--h2 kol-heading__headline">
        Headline
        <slot name="expert" slot="expert"></slot>
      </h1>
    </div>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _variant="h3" 1`] = `
<kol-heading>
  <template shadowrootmode="open">
    <div class="kol-heading">
      <h1 class="kol-heading--h3 kol-heading__headline">
        Headline
        <slot name="expert" slot="expert"></slot>
      </h1>
    </div>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _variant="h4" 1`] = `
<kol-heading>
  <template shadowrootmode="open">
    <div class="kol-heading">
      <h1 class="kol-heading--h4 kol-heading__headline">
        Headline
        <slot name="expert" slot="expert"></slot>
      </h1>
    </div>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _variant="h5" 1`] = `
<kol-heading>
  <template shadowrootmode="open">
    <div class="kol-heading">
      <h1 class="kol-heading--h5 kol-heading__headline">
        Headline
        <slot name="expert" slot="expert"></slot>
      </h1>
    </div>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _variant="h6" 1`] = `
<kol-heading>
  <template shadowrootmode="open">
    <div class="kol-heading">
      <h1 class="kol-heading--h6 kol-heading__headline">
        Headline
        <slot name="expert" slot="expert"></slot>
      </h1>
    </div>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" _variant="strong" 1`] = `
<kol-heading>
  <template shadowrootmode="open">
    <div class="kol-heading">
      <h1 class="kol-heading--strong kol-heading__headline">
        Headline
        <slot name="expert" slot="expert"></slot>
      </h1>
    </div>
  </template>
</kol-heading>
`;

exports[`kol-heading should render with _label="Headline" 1`] = `
<kol-heading>
  <template shadowrootmode="open">
    <div class="kol-heading">
      <h1 class="kol-heading--h1 kol-heading__headline">
        Headline
        <slot name="expert" slot="expert"></slot>
      </h1>
    </div>
  </template>
</kol-heading>
`;
